--- a/index.html
+++ b/index.html
@@ -4,25 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paint</title>
+    <title>Studio Art</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="jscolor.css" type="text/css" />
     <script src="jscolor.js"></script>
+    <script src="https://kit.fontawesome.com/65d3d9eac0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="cores">
-        <h3>Cor do lápis</h3>
-        <input type="color" id="seletorDeCores">
-        <button id="botaoBorracha">Borracha</button>
-        <button id="botaoPreencher">Preencher</button>
-        <button id="botaoPreencherFundo">Preencher Fundo</button>
-        <button id="botaoDesfazer">Desfazer</button>
-    </div>
 
-    <main>
-        <canvas id="canvas" width="900" height="600"></canvas>
-    </main>
+    <div class="tudo">
+        <div class="esquerdo">
+            <div class="cores">
+                <div class="lapis">
+                    <div id="controleTamanho">
+                        <input type="range" id="tamanhoDoTraco" min="1" max="20" value="1">
+                    </div>
+                    <input type="color" id="seletorDeCores">
+                </div>
+            </div>
+            <div class="botoes">
+                <button id="botaoBorracha">Borracha</button>
+                <button id="botaoPreencher">Preencher</button>
+                <button id="botaoPreencherFundo">Preencher Fundo</button>
+                <button id="botaoDesfazer"><i class="fa-solid fa-arrow-rotate-left"
+                        style="color: #000000;"></i></button>
+                <button id="botaoLimpar">Limpar tudo</button>
+            </div>
+        </div>
+
+        <main>
+            <canvas id="canvas" width="900" height="560"></canvas>
+        </main>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
