--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                 </div>
             </div>
             <div class="botoes">
-                <button id="botaoBorracha">Borracha</button>
+                <button id="botaoLapis" class="botao-forma"><i class="fa-solid fa-pencil" style="color: #000000;"></i>Lápis</button>
+                <button id="botaoBorracha" class="botao-forma"><i class="fa-solid fa-eraser" style="color: #000000;"></i>Borracha</button>
                 <button id="botaoPreencher">Preencher</button>
                 <button id="botaoPreencherFundo">Preencher Fundo</button>
                 <button id="botaoDesfazer"><i class="fa-solid fa-arrow-rotate-left"
                         style="color: #000000;"></i></button>
                 <button id="botaoLimpar">Limpar tudo</button>
+                <button id="salvarDesenho">Salvar Desenho</button>
             </div>
         </div>
 
