--- a/index.html
+++ b/index.html
@@ -21,25 +21,34 @@
                     <button id="botaoLapis" class="botao-forma"><i class="fa-solid fa-pencil"></i>Lápis</button>
                     <button id="botaoBorracha" class="botao-forma"><i class="fa-solid fa-eraser"></i>Borracha</button>
                 </div>
-                <div class="cores">
-                    <div class="lapis">
-                        <div id="controleTamanho">
-                            <input type="range" id="tamanhoDoTraco" min="1" max="70" value="1">
-                        </div>
+
+                <div class="input">
+                    <div id="controleTamanho">
+                        <input type="range" id="tamanhoDoTraco" min="1" max="70" value="1">
+                    </div>
+
+                    <div class="preencher-divs">
+                        <button id="botaoPreencher"><i class="fas fa-fill"></i>Preencher</button>
+                        <button id="botaoPreencherFundo"><i class="fa-solid fa-fill-drip"></i>Preencher Fundo</button>
+                    </div>
+
+                    <div class="cores">
+                        <p class="opcoes">Cores</p>
                         <input type="color" id="seletorDeCores">
                     </div>
                 </div>
-                <button id="botaoPreencher">Preencher</button>
-                <button id="botaoPreencherFundo">Preencher Fundo</button>
-                <button id="botaoDesfazer"><i class="fa-solid fa-arrow-rotate-left"
-                        style="color: #000000;"></i></button>
-                <button id="botaoLimpar">Limpar tudo</button>
-                <button id="salvarDesenho">Salvar Desenho</button>
+
+                <div class="final">
+                    <button id="botaoDesfazer"><i class="fa-solid fa-arrow-rotate-left"
+                            style="color: #000000;"></i></button>
+                    <button id="botaoLimpar">Limpar tudo</button>
+                    <button id="salvarDesenho">Salvar Desenho</button>
+                </div>
             </div>
         </div>
 
         <main>
-            <canvas id="canvas" width="900" height="560"></canvas>
+            <canvas id="canvas" width="920" height="560"></canvas>
         </main>
 
     </div>
