--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 </div>
 
                 <div class="final">
-                    <button id="botaoDesfazer"><i class="fa-solid fa-arrow-rotate-left"
-                            style="color: #000000;"></i></button>
+                    <div class="botaoDiferente">
+                    <button id="botaoDesfazer">Voltar<i class="fa-solid fa-arrow-rotate-left"></i>
+                      </button></div>                  
                     <button id="botaoLimpar">Limpar tudo</button>
                     <button id="salvarDesenho">Salvar Desenho</button>
                 </div>
