--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <div class="final">
                     <div class="botaoDiferente">
                         <button id="botaoDesfazer">Voltar<i class="fa-solid fa-arrow-rotate-left"></i>
-                        </button>
+                        <button id="botaoRefazer"><i class="fa-solid fa-arrow-rotate-right"></i>Avançar
+                            </button>
                     </div>
                     <div class="ultimos">
                         <button id="botaoLimpar">Limpar tudo</button>
